syntax = "proto3";

package productService;
option go_package = ".;productService";


service ProductService {
    rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc InsertProductStock (InsertProductStockRequest) returns (InsertProductStockResponse);
    rpc UpdateProductStock (UpdateProductStockRequest) returns (UpdateProductStockResponse);
}

message GetProductsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message GetProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
}

message CreateProductResponse {
    Product product = 1;
}

message InsertProductStockRequest {
    int32 productId = 1;
    int32 warehouseId = 2;
    int32 stockLevel = 3;
}

message InsertProductStockResponse {
    Product product = 1;
}

message UpdateProductStockRequest {
    int32 productId = 1;
    int32 warehouseId = 2;
    int32 stockLevel = 3;
    int32 whereWhouseId = 4;
}

message UpdateProductStockResponse {
    Product product = 1;
}

message Product {
    int32 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stockLevel = 5;
    int32 warehouseId = 6;
    string createdAt = 7;
    string updatedAt = 8;
}
